--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "html-webpack-plugin": "^2.29.0",
     "optimize-js-plugin": "0.0.4",
     "serve": "^1.4.0",
     "url-loader": "^0.5.9",
